objects/project_cloud__Resource_Request__c.object
<CustomObject>
    <fields>
        <fullName>ccpe_bmc__Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Remedy force incident</description>
        <inlineHelpText>Remedy force incident</inlineHelpText>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field indicates whether or not a Resource Request is Active.  Only Active Resource Requests impact Resource Capacity and Load.</description>
        <inlineHelpText>This field indicates whether or not a Resource Request is Active.  Only Active Resource Requests impact Resource Capacity and Load.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Approval_Status__c</fullName>
        <description>This field indicates the Approval Status for a Resource Request.</description>
        <inlineHelpText>This field indicates the Approval Status for a Resource Request.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Days__c</fullName>
        <description>This field indicates the number of days requested off for PTO.</description>
        <inlineHelpText>This field indicates the number of days requested off for PTO.</inlineHelpText>
        <label>Days</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Details__c</fullName>
        <description>This optional field provides the ability to include details related to a Resource Request.</description>
        <inlineHelpText>This optional field provides the ability to include details related to a Resource Request.</inlineHelpText>
        <label>Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__End__c</fullName>
        <description>The End Date of the Resource Request is used in Resource Capacity and Load calculations to distribute requested hours across a date range.</description>
        <inlineHelpText>This field indicates the End Date of the Date Range for which a Resource Request is being generated.</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Day__c</fullName>
        <formula>IF(ISBLANK( project_cloud__Hours__c ),
        project_cloud__Percentage_of_Work_Day__c * 8,
        project_cloud__Hours__c /  project_cloud__Working_Days__c 
) * project_cloud__Number_People__c</formula>
        <label>Hours Per Day (Calculated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Person__c</fullName>
        <formula>project_cloud__Hours__c / project_cloud__Working_Days__c / project_cloud__Number_People__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours per Person</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours__c</fullName>
        <description>This field represents the total number of hours requested for a Resource or Work Type over a given date range.</description>
        <inlineHelpText>This field represents the total number of hours requested for a Resource or Work Type over a given date range.</inlineHelpText>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field specifies a Location or a Team for the Resource Request and impacts Resource Capacity and Resource Load calculations.</description>
        <inlineHelpText>This field specifies a Location or a Team for the Resource Request (e.g. North America, Europe, etc.).</inlineHelpText>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>project_cloud__Work_Type__c.project_cloud__Type__c</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>project_cloud__Work_Type__c</referenceTo>
        <relationshipLabel>Resource Requests (Location)</relationshipLabel>
        <relationshipName>Resource_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Number_People__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This field indicates the number of resources requested when submitting a request for a specific Work Type.</description>
        <inlineHelpText>This field indicates the number of resources requested when submitting a request for a specific Work Type.</inlineHelpText>
        <label>Number of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use this field to create/relate Resource Requests back to an Opportunity during the Sales stage.</description>
        <inlineHelpText>This field relates a Resource Request to an Opportunity (if applicable).</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__PTO_Type__c</fullName>
        <description>This field indicates the type of PTO being requested for a specific user.</description>
        <inlineHelpText>This field indicates the type of PTO being requested for a specific user.</inlineHelpText>
        <label>PTO Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vacation</fullName>
                    <default>true</default>
                    <label>Vacation</label>
                </value>
                <value>
                    <fullName>Sick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Percentage_of_Work_Day__c</fullName>
        <description>This field indicates the percentage of one or more resource&apos;s day requested, based on the standard 8 hour work day.</description>
        <inlineHelpText>This field indicates the percentage of one or more resource&apos;s day requested, based on the standard 8 hour work day.</inlineHelpText>
        <label>Percentage of Work Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Charter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use this field to create/relate Resource Requests back to a Project Charter for Resource Requests generated prior to creating a Project.</description>
        <inlineHelpText>This field relates a Resource Request to a Project Charter (if applicable).</inlineHelpText>
        <label>Project Charter</label>
        <referenceTo>project_cloud__Charter__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use this field to create/relate Resource Requests back to a Project.</description>
        <inlineHelpText>This field relates a Resource Request to a Project (if applicable)</inlineHelpText>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field specifies a Resource for the Resource Request and impacts Resource Capacity and Resource Load calculations.</description>
        <inlineHelpText>This field specifies a Resource for the Resource Request.</inlineHelpText>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.project_cloud__Allocatable__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Start__c</fullName>
        <description>The Start Date of the Resource Request is used in Resource Capacity and Load calculations to distribute requested hours across a date range.</description>
        <inlineHelpText>This field indicates the Start Date of the Date Range for which a Resource Request is being generated.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Work_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field specifies a Work Type for the Resource Request and impacts Resource Capacity and Resource Load calculations.</description>
        <inlineHelpText>This field specifies a Work Type for the Resource Request.</inlineHelpText>
        <label>Work Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>project_cloud__Work_Type__c.project_cloud__Type__c</field>
                <operation>equals</operation>
                <value>Skill</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>project_cloud__Work_Type__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Working_Days__c</fullName>
        <label>Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Resource Request</label>
    <listViews>
        <fullName>project_cloud__All</fullName>
        <columns>NAME</columns>
        <columns>project_cloud__Opportunity__c</columns>
        <columns>project_cloud__Project__c</columns>
        <columns>project_cloud__Approval_Status__c</columns>
        <columns>project_cloud__Location__c</columns>
        <columns>project_cloud__Work_Type__c</columns>
        <columns>project_cloud__Start__c</columns>
        <columns>project_cloud__End__c</columns>
        <columns>project_cloud__Number_People__c</columns>
        <columns>project_cloud__Hours_Person__c</columns>
        <columns>project_cloud__Hours__c</columns>
        <columns>project_cloud__Percentage_of_Work_Day__c</columns>
        <columns>project_cloud__Working_Days__c</columns>
        <columns>project_cloud__Hours_Day__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>project_cloud__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RR-{0000000000}</displayFormat>
        <label>Resource Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Requests</pluralLabel>
    <recordTypes>
        <fullName>project_cloud__PTO</fullName>
        <active>true</active>
        <description>Create a Resource Request for PTO</description>
        <label>PTO</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__Resource_Hours</fullName>
        <active>true</active>
        <description>Create a Resource Request for a specific resource by inputting a total number of hours requested for a single resource over a given date range.</description>
        <label>Resource (Hours)</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__Resource_Percent_of_Work_Day</fullName>
        <active>true</active>
        <description>Create a Resource Request for a specific resource based on a percentage of his/her work day over a given date range.</description>
        <label>Resource (Percent of Work Day)</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__Work_Type_Hours</fullName>
        <active>true</active>
        <description>Create a Resource Request for a specific work type by inputting a total number of hours requested for one or more resources over a given date range.</description>
        <label>Work Type (Hours)</label>
    </recordTypes>
    <recordTypes>
        <fullName>project_cloud__Work_Type_Percent_of_Work_Day</fullName>
        <active>true</active>
        <description>Create a Resource Request for a specific work type for one or more resources based on a percentage of the work day over a given date range.</description>
        <label>Work Type (Percent of Work Day)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>project_cloud__Can_only_populate_percentage_or_hours</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(project_cloud__Percentage_of_Work_Day__c)), NOT(ISBLANK(project_cloud__Hours__c)))</errorConditionFormula>
        <errorMessage>You can only populate Percentage of Day or Hours Per Person, not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Start_Date_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>project_cloud__Start__c &gt; project_cloud__End__c</errorConditionFormula>
        <errorMessage>End Date must be greater than or equal to Start Date</errorMessage>
    </validationRules>
</CustomObject>